functionapp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: function-helloworld
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2    
spec:  
  rules:  
    - host: kube-demo.lotusinfo.tech
      http:
        paths:                
        - backend:
            serviceName: function-helloworld-http
            servicePort: 80
          path: /helloworld(/|$)(.*)
